fix string comparison